fix: allow to display Map and Set values and wrap long texts

--- a/src/components/ast/ASTViewer.module.css
+++ b/src/components/ast/ASTViewer.module.css
@@ -49,6 +49,17 @@
   color: var(--token-color-class-name);
 }
 
+.propNumber,
+.propEmpty,
+.propRegExp,
+.propClass,
+.propBoolean,
+.propError,
+.propString {
+  display: inline-flex;
+  max-width: 600px;
+}
+
 .propName {
   color: var(--token-color-property);
 }
